# asio

./: .appveyor.yml
asio/: .gitignore  Makefile.am  README  asio.manifest  configure.ac  release.pl
asio/include/: Makefile.am  asio.hpp
asio/include/asio/: any_completion_executor.hpp  any_completion_handler.hpp  any_io_executor.hpp  append.hpp  as_tuple.hpp  associated_allocator.hpp  associated_cancellation_slot.hpp  associated_executor.hpp  associated_immediate_executor.hpp  async_result.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_file.hpp  basic_io_object.hpp  basic_random_access_file.hpp  basic_raw_socket.hpp  basic_readable_pipe.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_file.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_waitable_timer.hpp  basic_writable_pipe.hpp  bind_allocator.hpp  bind_cancellation_slot.hpp  bind_executor.hpp  bind_immediate_executor.hpp  buffer.hpp  buffer_registration.hpp  buffered_read_stream.hpp  buffered_stream.hpp  buffered_write_stream.hpp  (+65 more)
asio/include/asio/detail/: assert.hpp  atomic_count.hpp  base_from_cancellation_state.hpp  base_from_completion_cond.hpp  bind_handler.hpp  blocking_executor_op.hpp  buffer_resize_guard.hpp  buffer_sequence_adapter.hpp  buffered_stream_storage.hpp  bulk_executor_op.hpp  chrono.hpp  completion_handler.hpp  completion_message.hpp  completion_payload.hpp  composed_work.hpp  config.hpp  consuming_buffers.hpp  cstdint.hpp  deadline_timer_service.hpp  descriptor_ops.hpp  descriptor_read_op.hpp  descriptor_write_op.hpp  dev_poll_reactor.hpp  epoll_reactor.hpp  event.hpp  executor_function.hpp  executor_op.hpp  fenced_block.hpp  future.hpp  global.hpp  handler_alloc_helpers.hpp  handler_invoke_helpers.hpp  handler_tracking.hpp  handler_type_requirements.hpp  handler_work.hpp  hash_map.hpp  initiate_defer.hpp  initiate_dispatch.hpp  initiate_post.hpp  io_object_impl.hpp  (+113 more)
asio/include/asio/execution/: allocator.hpp  any_executor.hpp  bad_executor.hpp  blocking.hpp  blocking_adaptation.hpp  bulk_execute.hpp  bulk_guarantee.hpp  connect.hpp  context.hpp  context_as.hpp  execute.hpp  executor.hpp  invocable_archetype.hpp  mapping.hpp  occupancy.hpp  operation_state.hpp  outstanding_work.hpp  prefer_only.hpp  receiver.hpp  receiver_invocation_error.hpp  relationship.hpp  schedule.hpp  scheduler.hpp  sender.hpp  set_done.hpp  set_error.hpp  set_value.hpp  start.hpp  submit.hpp
asio/include/asio/experimental/: append.hpp  as_single.hpp  as_tuple.hpp  awaitable_operators.hpp  basic_channel.hpp  basic_concurrent_channel.hpp  cancellation_condition.hpp  channel_error.hpp  channel_traits.hpp  co_spawn.hpp  coro.hpp  deferred.hpp  parallel_group.hpp  prepend.hpp  use_coro.hpp  use_promise.hpp
asio/include/asio/generic/: basic_endpoint.hpp  datagram_protocol.hpp  raw_protocol.hpp  seq_packet_protocol.hpp  stream_protocol.hpp
asio/include/asio/impl/: any_completion_executor.ipp  any_io_executor.ipp  append.hpp  as_tuple.hpp  awaitable.hpp  buffered_read_stream.hpp  buffered_write_stream.hpp  cancel_after.hpp  cancel_at.hpp  co_spawn.hpp  compose.hpp  connect.hpp  connect_pipe.hpp  connect_pipe.ipp  consign.hpp  defer.hpp  deferred.hpp  detached.hpp  dispatch.hpp  error.ipp  error_code.ipp  execution_context.hpp  executor.hpp  executor.ipp  handler_alloc_hook.ipp  io_context.hpp  io_context.ipp  multiple_exceptions.ipp  post.hpp  prepend.hpp  read.hpp  read_at.hpp  read_until.hpp  redirect_error.hpp  serial_port_base.ipp  spawn.hpp  src.hpp  system_context.hpp  system_context.ipp  system_executor.hpp  (+6 more)
asio/include/asio/ip/: address.hpp  address_v4.hpp  address_v4_iterator.hpp  address_v4_range.hpp  address_v6.hpp  address_v6_iterator.hpp  address_v6_range.hpp  bad_address_cast.hpp  basic_endpoint.hpp  basic_resolver.hpp  basic_resolver_entry.hpp  basic_resolver_iterator.hpp  basic_resolver_results.hpp  host_name.hpp  icmp.hpp  network_v4.hpp  network_v6.hpp  tcp.hpp  udp.hpp
asio/include/asio/local/: basic_endpoint.hpp  connect_pair.hpp  datagram_protocol.hpp  seq_packet_protocol.hpp  stream_protocol.hpp
asio/include/asio/posix/: basic_descriptor.hpp  basic_stream_descriptor.hpp
asio/include/asio/ssl/: context.hpp  error.hpp  stream.hpp
asio/include/asio/traits/: bulk_execute_free.hpp  bulk_execute_member.hpp  connect_free.hpp  connect_member.hpp  equality_comparable.hpp  execute_free.hpp  execute_member.hpp  prefer_free.hpp  prefer_member.hpp  query_free.hpp  query_member.hpp  query_static_constexpr_member.hpp  require_concept_free.hpp  require_concept_member.hpp  require_free.hpp  require_member.hpp  schedule_free.hpp  schedule_member.hpp  set_done_free.hpp  set_done_member.hpp  set_error_free.hpp  set_error_member.hpp  set_value_free.hpp  set_value_member.hpp  start_free.hpp  start_member.hpp  static_query.hpp  static_require.hpp  static_require_concept.hpp  (+2 more)
asio/src/: Makefile.am  Makefile.mgw  Makefile.msc
asio/src/doc/: examples.qbk  history.qbk  platform_macros.qbk  reference.dox  reference.qbk  std_executors.qbk  tutorial.dox  tutorial.qbk  using.qbk
asio/src/tests/: Makefile.am
(+506 files in other folders)
