EXAMPLES_CPP11 = examples/cpp11

# C++14
EXAMPLES_CPP14 = examples/cpp14

# C++20
EXAMPLES_CPP20 = examples/cpp20

SUBDIRS = \
	$(EXAMPLES_CPP11) \
	$(EXAMPLES_CPP14) \
	$(EXAMPLES_CPP20) \
	tests

DIST_SUBDIRS = \
	examples/cpp11 \
	examples/cpp14 \
	examples/cpp20 \
	tests

EXTRA_DIST = \
	Makefile.mgw \
	Makefile.msc \
	tools/handlerlive.pl \
	tools/handlertree.pl \
	tools/handlerviz.pl

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
